--- a/ECOdream/Base.lproj/Main.storyboard
+++ b/ECOdream/Base.lproj/Main.storyboard
@@ -35,6 +35,10 @@
                                     <segue destination="SQZ-pc-QQv" kind="show" id="Zde-i2-gpB"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ird-PX-SbE">
+                                <rect key="frame" x="48" y="354" width="318" height="269"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.76465100050000001" green="0.89988368750000003" blue="0.75292223690000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -45,7 +49,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="106" y="76"/>
+            <point key="canvasLocation" x="105.79710144927537" y="75.669642857142847"/>
         </scene>
         <!--Age Range View Controller-->
         <scene sceneID="KAZ-FU-zDQ">
@@ -1110,17 +1114,17 @@ https://www.parks.ca.gov/?page_id=27144</string>
     <inferredMetricsTieBreakers>
         <segue reference="Pmt-3Q-1z5"/>
         <segue reference="AVe-Do-Muq"/>
-        <segue reference="baS-mL-7b1"/>
+        <segue reference="jZW-RO-sdm"/>
         <segue reference="P6w-ik-PNl"/>
-        <segue reference="A7h-GX-aex"/>
+        <segue reference="tyq-HV-kcg"/>
         <segue reference="n63-xH-9gj"/>
         <segue reference="TzL-o5-Ycn"/>
         <segue reference="Isr-BA-oae"/>
         <segue reference="khG-Nx-rKf"/>
         <segue reference="y8e-t9-V8C"/>
         <segue reference="ppc-LU-vTm"/>
-        <segue reference="LN2-FM-RhY"/>
-        <segue reference="Uu5-N3-3In"/>
+        <segue reference="gxI-ZN-OoX"/>
+        <segue reference="nn3-N0-Gxq"/>
     </inferredMetricsTieBreakers>
     <resources>
         <namedColor name="AccentColor">
