--- a/ECOdream/Base.lproj/Main.storyboard
+++ b/ECOdream/Base.lproj/Main.storyboard
@@ -35,8 +35,8 @@
                                     <segue destination="SQZ-pc-QQv" kind="show" id="Zde-i2-gpB"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ird-PX-SbE">
-                                <rect key="frame" x="48" y="354" width="318" height="269"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2021-08-05 at 10.18.06 AM" translatesAutoresizingMaskIntoConstraints="NO" id="Ird-PX-SbE">
+                                <rect key="frame" x="40" y="352" width="335" height="292"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -237,16 +237,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Teen Tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="htB-1a-Scy">
-                                <rect key="frame" x="156" y="20" width="99" height="30"/>
+                                <rect key="frame" x="156" y="50" width="99" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="25"/>
                                 <color key="textColor" red="0.3411667645" green="0.49195641280000002" blue="0.33723187449999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cHG-sm-1KE">
-                                <rect key="frame" x="167" y="146" width="81" height="39"/>
+                                <rect key="frame" x="175" y="150" width="68" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Clothing"/>
                                 <connections>
                                     <segue destination="bVm-io-fhf" kind="show" id="Pmt-3Q-1z5"/>
@@ -273,7 +273,7 @@
                                 <state key="normal" title="Reuse + Recycle"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kd4-Po-0v9">
-                                <rect key="frame" x="63" y="50" width="34" height="30"/>
+                                <rect key="frame" x="41" y="20" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
@@ -669,17 +669,6 @@ https://www.parks.ca.gov/?page_id=27144</string>
                                 <color key="textColor" red="0.3411667645" green="0.49195641280000002" blue="0.33723187449999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2c-Q6-mry">
-                                <rect key="frame" x="144" y="149" width="127" height="56"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="20"/>
-                                <state key="normal" title="Clothing">
-                                    <color key="titleColor" red="0.3411667645" green="0.49195641280000002" blue="0.33723187449999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <segue destination="geu-G1-T5m" kind="show" id="PII-ph-d4d"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RQU-sG-oXA">
                                 <rect key="frame" x="145" y="266" width="123" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -733,18 +722,29 @@ https://www.parks.ca.gov/?page_id=27144</string>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Adult Tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="piL-Ja-k9D">
-                                <rect key="frame" x="151" y="36" width="107" height="30"/>
+                                <rect key="frame" x="145" y="82" width="107" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="25"/>
                                 <color key="textColor" red="0.3411667645" green="0.49195641280000002" blue="0.33723187449999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jgf-DA-E7F">
-                                <rect key="frame" x="42" y="63" width="34" height="30"/>
+                                <rect key="frame" x="32" y="20" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
                                     <segue destination="w8q-BM-V16" kind="show" id="A7h-GX-aex"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2c-Q6-mry">
+                                <rect key="frame" x="137" y="175" width="127" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="20"/>
+                                <state key="normal" title="Clothing">
+                                    <color key="titleColor" red="0.3411667645" green="0.49195641280000002" blue="0.33723187449999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <segue destination="geu-G1-T5m" kind="show" id="PII-ph-d4d"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -978,14 +978,14 @@ https://www.parks.ca.gov/?page_id=27144</string>
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Child Tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LiF-BK-8p5">
-                                <rect key="frame" x="153" y="34" width="107" height="30"/>
+                                <rect key="frame" x="154" y="70" width="107" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="25"/>
                                 <color key="textColor" red="0.3411667645" green="0.49195641280000002" blue="0.33723187449999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DM4-0b-A3i">
-                                <rect key="frame" x="61" y="743" width="34" height="30"/>
+                                <rect key="frame" x="39" y="48" width="34" height="1"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
@@ -1114,19 +1114,20 @@ https://www.parks.ca.gov/?page_id=27144</string>
     <inferredMetricsTieBreakers>
         <segue reference="Pmt-3Q-1z5"/>
         <segue reference="AVe-Do-Muq"/>
-        <segue reference="jZW-RO-sdm"/>
+        <segue reference="baS-mL-7b1"/>
         <segue reference="P6w-ik-PNl"/>
-        <segue reference="tyq-HV-kcg"/>
+        <segue reference="A7h-GX-aex"/>
         <segue reference="n63-xH-9gj"/>
         <segue reference="TzL-o5-Ycn"/>
         <segue reference="Isr-BA-oae"/>
         <segue reference="khG-Nx-rKf"/>
         <segue reference="y8e-t9-V8C"/>
         <segue reference="ppc-LU-vTm"/>
-        <segue reference="gxI-ZN-OoX"/>
+        <segue reference="LN2-FM-RhY"/>
         <segue reference="nn3-N0-Gxq"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="Screen Shot 2021-08-05 at 10.18.06 AM" width="834" height="842"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
